# dive-computer-fw

./: .gitignore  Cargo.toml  Embed.toml  flake.nix  memory.x  openocd.cfg  openocd.gdb  rust-toolchain.toml
.cargo/: config.toml
aux/: generate_dive_data.py  plot_saturation.py  requirements.txt
src/: bluenrgm0a.rs  bmp280.rs  decotask.rs  ens160.rs  i2cdriver.rs  ili9341.rs  main.rs  mmc5983ma.rs  ms5837.rs  spidriver.rs  state.rs
src/tasks/: air_quality_request.rs  batt_voltage_monitor.rs  buzzer.rs  enter_button.rs  flash_timestamp.rs  lcd_brightness.rs  mod.rs  next_button.rs  ninedof.rs  no_interaction.rs  sd_card.rs  threedof.rs  usart_hello.rs  usb_device.rs
