[package]
authors = ["hjeldin"]
edition = "2024"
readme = "README.md"
name = "stm-blink"
version = "0.1.0"
resolver = "2"

[features]
serde = []

[dependencies]
embassy-stm32 = { path = "../embassy/embassy-stm32", features = ["defmt", "memory-x", "chrono", "stm32l476rg", "time-driver-any", "unstable-pac", "exti" ] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"]}
cortex-m-rt = "0.7.5"
#cortex-m-semihosting = "0.3.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
defmt-serial = "0.10.0"
# stm32f0xx-hal = { version = "0.14.1", features = ["stm32f030x8", "rt"] }
# ens160 = { version = "0.6", default-features = false }
embassy-sync = { path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { path = "../embassy/embassy-futures" }
embassy-usb-dfu = { path = "../embassy/embassy-usb-dfu", features = ["defmt", "dfu", "cortex-m"] }
embassy-boot-stm32 = { path = "../embassy/embassy-boot-stm32", features = ["defmt"] }
static_cell = { version = "2" }
portable-atomic = { version = "1.5" }
panic-probe = { version = "0.3.2", features = ["defmt", "print-defmt"] }
embedded-hal-async = "1.0.0"
heapless = "0.8.0"
bitfield = "0.14.0"
stm-graphics = { path = "../dive-computer-gfx" }
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
chrono = { version = "^0.4", default-features = false}
log = "0.4.22"
ism330dhcx = { git = "https://github.com/hjeldin/async-ism330dhcx.git" }
mmc5983ma = { git = "https://github.com/John2143/mmc5983ma.git" , features = ["float", "defmt"]}
libm = "0.2.11"
embedded-sdmmc = { git = "https://github.com/Be-ing/embedded-sdmmc-rs.git", rev = "835b2e4f9d3482b6287f674d7ecf6ae5d0618c18" }
critical-section = { version = "1.1.0" }
format_no_std = "1.2.0"
usbd-hid = "0.8.1"

dive-computer-deco = { path = "../dive-computer-deco", default-features = false, features = [] }
dive-computer-proto = { path = "../dive-computer-proto" }
embedded-storage = "0.3.1"
ahrs = { version = "0.8.0", default-features = false }
nalgebra = { version = "0.34", default-features = false }

[patch.crates-io]
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab" }
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab" }
# dive-deco = "5.0.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm-blink"
test = false
bench = false

# working and flashing
[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # better optimizations

#[profile.release]
#codegen-units = 1 # better optimizations
#debug = true # symbols are nice and they don't increase the size on Flash
#lto = 'fat'
#opt-level = "z" # better optimizations
